@@ -8,3 +8,8 @@
 .skiptranslate.goog-te-gadget a:hover{
 	color:#fee09c;
 }
+
+/* Google Search */
+.gs-visibleUrl-breadcrumb{
+	color: #008A28 !important;
+}
