@@ -1,9 +1,0 @@
-/* Dropdown Navigation Styles */
-.main-navigation.dropdown .sub-nav ul li{
-	width: 100%;
-	height: auto;
-}
-
-.main-navigation.dropdown .sub-nav ul li img{
-	display: none;
-}
