@@ -1,5 +1,3 @@
-$first-level-link-height : auto;
-
 @import '../custom/template';
 @import '../custom/main-content';
 @import '../custom/page-margins';
